--- a/src/main/webapp/html/laskentakaava/laskentakaavamenu.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavamenu.html
@@ -209,43 +209,18 @@
                             </tr>
                         </thead>
                         <tbody>
+
                             <tr ng-repeat="syoteparametri in funktioSelection.lapsi.syoteparametrit">
                                 <td>Avain: {{syoteparametri.avain}}</td>
                                 <td ng-include="syoteparametriTemplate(funktioSelection, $index)"></td>
                             </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="clear"></div>
-        </div>
-
-        <!-- 
-        TULOSTEKSTI
-        TULOSTUNNISTE
-        TALLENNATULOS
-        -->
-        <div class="form-item">
-            <label class="form-item-label" style="width:100px;">Tulostunniste, Tallennatulos ja Tulosteksti</label>
-
-            <div class="form-item-content">
-
-                <div class=" settingsbox">
-                    <table class="settingstable">
-                        <thead>
                             <tr>
-                                <td>Määrite</td>
-                                <td>Arvo</td>
+                                <td>Tallenna tulos</td>
+                                <td><input type="checkbox" ng-model="funktioSelection.lapsi.tallennaTulos" ng-false-value="false" ng-true-value="true"/></td>
                             </tr>
-                        </thead>
-                        <tbody>
                             <tr>
                                 <td>Tulostunniste</td>
                                 <td><input type="text" ng-model="funktioSelection.lapsi.tulosTunniste" /></td>
-                            </tr>
-                             <tr>
-                                <td>Tallenna tulos</td>
-                                <td><input type="checkbox" ng-model="funktioSelection.lapsi.tallennaTulos" /></td>
                             </tr>
                              <tr>
                                 <td>Tulosteksti FI</td>
