vt-700: haelukuarvoehdolla -funktiokutsu toteutettu

--- a/src/main/webapp/html/laskentakaava/laskentakaavapuu.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavapuu.html
@@ -105,6 +105,7 @@
 <!--
     HAETOTUUSARVO
     HAELUKUARVO
+    HAELUKUARVOEHDOLLA
     HAEMERKKIJONOJAKONVERTOILUKUARVOKSI
     HAEMERKKIJONOJAVERTAAYHTASUURUUS
     HAEMERKKIJONOJAKONVERTOITOTUUSARVOKSI
@@ -385,6 +386,10 @@ YHTASUURI
             <tr>
                 <td ng-click="addFunktio(parent, 'SKAALAUS', funktioSlotIndex); showNewFunktioList.visible = false"><span>Skaalaus</span></td>
                 <td ng-click="addFunktio(parent, 'PAINOTETTUKESKIARVO', funktioSlotIndex); showNewFunktioList.visible = false"><span>Painotettu keskiarvo</span></td>
+            </tr>
+            <tr>
+                <td ng-click="addFunktio(parent, 'HAELUKUARVOEHDOLLA', funktioSlotIndex); showNewFunktioList.visible = false"><span>Hae lukuarvo ehdolla</span></td>
+                <td></td>
             </tr>
         </tbody>
     </table>
