takaisin-painike laskentakaavalistaukseen

--- a/src/main/webapp/html/laskentakaava/laskentakaavalista.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalista.html
@@ -96,4 +96,13 @@
             </div>
         </div>
     </div>
+
+    <div class="grid16-16">
+        <button type="button" class="float-left margin-right-1 button small" ng-click="cancel()"><i
+                class="fa fa-arrow-left"></i> Takaisin
+        </button>
+    </div>
+
+    <div class="clear"></div>
+
 </div>
