laskentakaavaeditorin toteutus siirretty omaan angular-moduuliinsa

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -39,6 +39,8 @@
     <script type="text/javascript" src="../js/filters.js"></script>
     <script type="text/javascript" src="../js/auth.js"></script>
 
+
+    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavaeditor.js"></script>
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavaresources.js"></script>
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavamenu.js"></script>
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavalista.js"></script>
