--- a/src/main/webapp/html/laskentakaava/laskentakaavalista.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalista.html
@@ -10,6 +10,7 @@
 
 <div class="tabsheets">
 
+
     <h2>Laskentakaavalista</h2>
     <span ng-click="createKaava()" class="button small"><i class="fa fa-plus"></i> Laskentakaava</span>
 
@@ -97,7 +98,7 @@
         </div>
     </div>
 
-    <div class="grid16-16">
+    <div class="width-60">
         <button type="button" class="float-left margin-right-1 button small" ng-click="cancel()"><i
                 class="fa fa-arrow-left"></i> Takaisin
         </button>
