Minimoidut jqueryt ja source mapit ui:hin

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -5,17 +5,20 @@
     <title>Valintaperusteiden mallinnus</title>
     
     <!-- libs -->
-    <script type="text/javascript" src="../jslib/jquery-2.1.0/jquery-2.1.0.js"></script>
+    <script type="text/javascript" src="../jslib/jquery-2.1.0/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="../jslib/jquery-ui-1.9.2/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="../jslib/jquery-2.1.0/jquery.i18n.properties-min-1.0.9.min.js"></script>
+
     <script type="text/javascript" src="../jslib/jquery-2.1.0/jquery.nestable.js"></script>
     <script type="text/javascript" src="../jslib/jquery-2.1.0/jquery.mjs.nestedSortable.js"></script>
-    <script type="text/javascript" src="../jslib/jquery-2.1.0/jquery.i18n.properties-min-1.0.9.js"></script>
     <script type="text/javascript" src="../jslib/lodash.js"></script>
-    <script type="text/javascript" src="../jslib/angular-1.2.10/angular.js"></script>
-    <script type="text/javascript" src="../jslib/angular-1.2.10/angular-resource.js"></script>
-    <script type="text/javascript" src="../jslib/angular-1.2.10/angular-route.js"></script>
+
+    <script type="text/javascript" src="../jslib/angular-1.2.10/angular.min.js"></script>
+    <script type="text/javascript" src="../jslib/angular-1.2.10/angular-resource.min.js"></script>
+    <script type="text/javascript" src="../jslib/angular-1.2.10/angular-route.min.js"></script>
     <script type="text/javascript" src="../jslib/ui-boostrap-tpls-0.7.0.js"></script>
-    <script type="text/javascript" src="../jslib/angular-1.2.10/angular-animate.js"></script>
+    <script type="text/javascript" src="../jslib/angular-1.2.10/angular-animate.min.js"></script>
+
 
     <!--conf -->
     <script type="text/javascript"  src="../configuration/configuration.js"></script>
@@ -63,6 +66,8 @@
     <link href="../css/font-awesome-4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="../css/virkailija.css" rel="stylesheet" type="text/css" />
     <link href="../css/other.css" rel="stylesheet" type="text/css" />
+
+
 </head>
 <body>
 
