--- a/src/main/webapp/html/hakukohdelomake.html
+++ b/src/main/webapp/html/hakukohdelomake.html
@@ -7,20 +7,18 @@
 
 
 <div class="tabsheets">
-    <form name="form" ng-submit="submit()">
-        <div class="form-row">
-            <label class="form-row-label">Hakukohteen nimi</label>
+    <form class="form-horizontal" name="form" ng-submit="submit()">
+        <div class="form-group">
+            <label class="col-md-2 control-label">Hakukohteen nimi</label>
 
-            <div class="form-row-content width-60">
-                {{model.hakukohde.nimi}} ({{model.hakukohde.oid}})
-            </div>
-            <div class="clear"></div>
+            <div class="col-md-10 control-content">{{model.hakukohde.nimi}} ({{model.hakukohde.oid}})</div>
         </div>
 
-        <div class="form-row">
-            <label class="form-row-label">Hakukohdekoodi:</label>
 
-            <div class="form-row-content width-60">
+        <div class="form-group">
+            <label class="col-md-2 control-label">Hakukohdekoodi: </label>
+
+            <div class="col-md-6 control-content">
                 <table class="virkailija-table-1">
                     <thead>
                     <tr>
@@ -39,79 +37,74 @@
                     </tbody>
 
                 </table>
-
             </div>
-            <div class="clear"></div>
         </div>
 
-        <div class="form-row ">
-            <label class="form-row-label">&nbsp;</label>
+        <div class="form-group">
 
-            <div class="form-row-content width-60">
-                <input class="width-60" type="text" ng-model="uusiHakukohdeUri"
+            <div class="col-md-offset-2 col-md-10">
+                <input type="text" ng-model="uusiHakukohdeUri"
                        typeahead-editable="false"
                        typeahead="koodi as koodi.metadata[0].nimi + ' (' + koodi.koodiUri + ')' for koodi in model.hakukohdekoodit| filter:$viewValue | orderBy:'metadata[0].nimi' | limitTo :10 ">
-                <button auth="update" type="button" class="margin-bottom-0 small" ng-click="addHakukohdeUri()"
+                <button class="primary" auth="update" type="button" ng-click="addHakukohdeUri()"
                         ng-disabled="!uusiHakukohdeUri"><i class="fa fa-refresh"></i> Päivitä
                 </button>
             </div>
-            <div class="clear"></div>
+
         </div>
 
-        <div class="form-row">
-            <label class="form-row-label">Haun Tunniste (oid):</label>
+        <div class="form-group">
+            <label class="col-md-2 control-label">Haun Tunniste (oid):</label>
 
-            <div class="form-row-content width-60">
+            <div class="control-content col-md-10">
                 {{model.haku.nimi.kieli_fi}} ({{model.haku.oid}})
             </div>
-            <div class="clear"></div>
         </div>
 
-        <div class="form-row">
-            <label class="form-row-label">Tarjoaja (oid):</label>
+        <div class="form-group">
+            <label class="col-md-2 control-label">Tarjoaja (oid):</label>
 
-            <div class="form-row-content width-60">
+            <div class="control-content col-md-10">
                 {{model.hakukohde.tarjoajaOid}}
                 <!--<br/>{{model.selectedHakukohde.tarjoajaOid}}-->
             </div>
-            <div class="clear"></div>
         </div>
 
-        <div class="form-row">
-            <label class="form-row-label">Julkaisutila:</label>
+        <div class="form-group">
+            <label class="col-md-2 control-label">Julkaisutila:</label>
 
-            <div class="form-row-content width-60">
+            <div class="control-content col-md-10">
                 {{model.hakukohde.tila}}
                 <!--<br/>{{model.selectedHakukohde.tarjoajaOid}}-->
             </div>
-            <div class="clear"></div>
         </div>
 
-        <div class="form-row" ng-show="model.parentValintaryhma.nimi">
-            <div class="form-row-label">Valintaryhmä</div>
+        <div class="form-group" ng-show="model.parentValintaryhma.nimi">
+            <div class="col-md-2 control-label">Valintaryhmä</div>
 
-            <div class="form-row-content">
+            <div class="control-content">
                 <!--{{model.hakukohde.oid}}-->
                 {{model.parentValintaryhma.nimi}}
                 <!--
                 <input type="text" ng-model="hakukohde.oid" disabled />
                 -->
             </div>
-            <div class="clear"></div>
         </div>
 
-        <div class="form-row">
-            <div class="form-row-label">Kuuluu sijoitteluun</div>
-            <div class="form-row-content">
+        <div class="form-group">
+            <label class="col-md-2 control-label">Kuuluu sijoitteluun</label>
+
+            <div class="control-content col-md-10">
                 {{model.kuuluuSijoitteluun ? 'Kyllä' : 'Ei'}}
             </div>
-            <div class="clear"></div>
         </div>
 
-        <div class="form-row width-100">
-            <div class="form-row-label">Valinnan vaiheet</div>
-            <div class="form-row-content width-60">
-                <table auth="update" ng-show="model.valinnanvaiheet" class="virkailija-table-1 margin-bottom-2 width-60">
+        <div class="form-group width-100">
+            <label class="col-md-2 control-label">Valinnan vaiheet</label>
+
+            <div class="control-content col-md-10">
+                <table auth="update" ng-show="model.valinnanvaiheet"
+                       class="virkailija-table-1">
                     <thead>
                     <tr>
                         <th>Aktiivinen</th>
@@ -131,26 +124,31 @@
                         <td class="align-center">{{data.inheritance ? 'Kyllä' : 'Ei'}}</td>
                         <td class="align-center">{{data.valinnanVaiheTyyppi}}</td>
                         <td class="align-center">
-                            <span auth="crud" ng-show="!data.inheritance" class="btn remove" ng-click="model.remove(data)"></span>
+                                <span auth="crud" ng-show="!data.inheritance" class="btn remove"
+                                      ng-click="model.remove(data)"></span>
                         </td>
 
                     </tr>
                     </tbody>
                 </table>
+            </div>
 
-                <div class="clear"></div>
+        </div>
 
-                <div ng-show="model.hakukohde.oid" class="form-row">
-                    <span auth="crud" class="button small" ng-click="lisaaValinnanVaihe()"><i class="fa fa-plus"></i> Valinnanvaihe</span>
-                    <span auth="crud" class="button small" ng-click="lisaaValintakoeValinnanVaihe()"><i class="fa fa-plus"></i> Valintakoevalinnanvaihe</span>
-                </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10" ng-show="model.hakukohde.oid">
+                <span auth="crud" class="button small" ng-click="lisaaValinnanVaihe()"><i
+                        class="fa fa-plus"></i> Valinnanvaihe</span>
+                <span auth="crud" class="button small" ng-click="lisaaValintakoeValinnanVaihe()"><i
+                        class="fa fa-plus"></i> Valintakoevalinnanvaihe</span>
             </div>
         </div>
 
-        <div class="form-row width-100">
-            <div class="form-row-label">Hakijaryhmat</div>
-            <div class="form-row-content width-60">
-                <table ng-show="model.hakijaryhmat" class="virkailija-table-1 margin-bottom-2 width-60">
+        <div class="form-group">
+            <label class="col-md-2 control-label">Hakijaryhmat</label>
+
+            <div class="control-content col-md-10">
+                <table ng-show="model.hakijaryhmat" class="virkailija-table-1">
                     <thead>
                     <tr>
                         <th>Nimi</th>
@@ -183,22 +181,24 @@
                     </tbody>
                 </table>
 
-                <div class="clear"></div>
 
-                <div ng-show="model.hakukohde.oid" class="form-row">
+                <div ng-show="model.hakukohde.oid">
                     <span auth="crud" class="button small" ng-click="lisaaHakijaryhma()"><i
                             class="fa fa-plus"></i> Hakijaryhma</span>
                 </div>
             </div>
         </div>
 
-        <div class="clear"></div>
-
-        <button auth="update" ng-disabled="!form.$valid" class="button small primary" type="submit"><i class="fa fa-floppy-o"></i>
-            Tallenna
-        </button>
-        <button type="button" class="float-left margin-right-1 button small" ng-click="cancel()"><i
-                class="fa fa-arrow-left"></i> Takaisin
-        </button>
+        <div class="form-group">
+            <div class="col-md-2">
+                <button auth="update" ng-disabled="!form.$valid" class="button small primary" type="submit"><i
+                        class="fa fa-floppy-o"></i>
+                    Tallenna
+                </button>
+                <button type="button" class="button small" ng-click="cancel()"><i
+                        class="fa fa-arrow-left"></i> Takaisin
+                </button>
+            </div>
+        </div>
     </form>
 </div>
