--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -63,10 +63,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <!-- virkailija css -->
+
     <link href="../css/font-awesome-4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="../css/virkailija.css" rel="stylesheet" type="text/css" />
     <link href="../css/other.css" rel="stylesheet" type="text/css" />
 
+    <link href="../css/bootstrap-3.1.1/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+    <link href="../css/virkailija-valintaperusteet.css" rel="stylesheet" type="text/css"/>
 
 </head>
 <body>
